# mae_fyp

./: .gitignore  app.py  main.py  pyproject.toml  test.py  test2.py
data/asme_issues/: Volume 100 Issue 1 _ J. Mech. Des. _ ASME Digital Collection.html  Volume 100 Issue 2 _ J. Mech. Des. _ ASME Digital Collection.html  Volume 100 Issue 3 _ J. Mech. Des. _ ASME Digital Collection.html  Volume 100 Issue 4 _ J. Mech. Des. _ ASME Digital Collection.html  Volume 101 Issue 1 _ J. Mech. Des. _ ASME Digital Collection.html  Volume 101 Issue 2 _ J. Mech. Des. _ ASME Digital Collection.html  Volume 101 Issue 3 _ J. Mech. Des. _ ASME Digital Collection.html  Volume 101 Issue 4 _ J. Mech. Des. _ ASME Digital Collection.html  Volume 102 Issue 1 _ J. Mech. Des. _ ASME Digital Collection.html  Volume 102 Issue 2 _ J. Mech. Des. _ ASME Digital Collection.html  Volume 102 Issue 3 _ J. Mech. Des. _ ASME Digital Collection.html  Volume 102 Issue 4 _ J. Mech. Des. _ ASME Digital Collection.html  Volume 103 Issue 1 _ J. Mech. Des. _ ASME Digital Collection.html  Volume 103 Issue 2 _ J. Mech. Des. _ ASME Digital Collection.html  Volume 103 Issue 3 _ J. Mech. Des. _ ASME Digital Collection.html  Volume 103 Issue 4 _ J. Mech. Des. _ ASME Digital Collection.html  Volume 104 Issue 1 _ J. Mech. Des. _ ASME Digital Collection.html  Volume 104 Issue 2 _ J. Mech. Des. _ ASME Digital Collection.html  Volume 104 Issue 3 _ J. Mech. Des. _ ASME Digital Collection.html  Volume 104 Issue 4 _ J. Mech. Des. _ ASME Digital Collection.html  Volume 105 Issue 1 _ J. Mech. Des. _ ASME Digital Collection.html  Volume 105 Issue 2 _ J. Mech. Des. _ ASME Digital Collection.html  (+320 more)
notebooks/: 04_steamlit_explore.ipynb  0_explore.ipynb  1_html_to_df_pdf_urls.ipynb  2_pdf_to_text.ipynb  2_pymupdf_explore.ipynb  3_docling_explore.ipynb  3_llm_explore.ipynb  4_scholarBERT_explore.ipynb  5_Keywords_Collection_Explore.ipynb  Step 1 - JMD Web Page Scraping.ipynb  Step 2 - pdf2text.ipynb  explore.ipynb  explore2.ipynb  tutorial1.ipynb
scripts/: bootstrap.py  md_pdf.py  md_scholarBERT_emb.py  pymupdf_parsing_save.py  pymupdf_scholarBERT_emb.py  scholarBERT_emb.py  telegram_update.py
src/: test.py
(+89 files in other folders)
