[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "duckdb>=1.3.2",
    "fastexcel>=0.14.0",
    "jupyterlab>=4.4.5",
    "lxml>=6.0.0",
    "lxml-html-clean>=0.4.2",
    "matplotlib==3.10.5",
    "nltk>=3.9.1",
    "nodriver>=0.47.0",
    "notebook>=7.4.4",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.0.250703",
    "pdfminer>=20191125",
    "playwright>=1.54.0",
    "polars>=1.31.0",
    "requests>=2.32.4",
    "requests-html>=0.10.0",
    "seaborn>=0.13.2",
    "selenium-stealth>=1.0.6",
    "undetected-chromedriver>=3.5.5",
]
